# SparkleQtTutorial

./: .gitignore  CMakeLists.txt
assets/: Info.plist
src/: SparkleAutoUpdater.cpp  SparkleAutoUpdater.h  SparkleAutoUpdater.ui  main.mm  updater.h  updater_sparkle.mm
